--- a/DDPG/eval_ddpg.ipynb
+++ b/DDPG/eval_ddpg.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        " '10': ['GoldenEye (1995)', 'Action|Adventure|Thriller']}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,12 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(os.path.join(ROOT_DIR, \"data/user_dict.npy\"), users_dict)\n",
-    "np.save(os.path.join(ROOT_DIR, \"data/users_histroy_len.npy\"), users_history_lens)"
+    "np.save(os.path.join(os.getcwd(), \"data/user_dict.npy\"), users_dict)\n",
+    "np.save(os.path.join(os.getcwd(), \"data/users_histroy_len.npy\"), users_history_lens)"
    ]
   },
   {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
     "import time\n",
     "\n",
     "from envs import OfflineEnv\n",
-    "from recommender import DRRAgent"
+    "from ddpg import DDPGAgent"
    ]
   },
   {
@@ -260,11 +260,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate(recommender, env, check_movies = False, top_k=False):\n",
+    "def evaluate(recommender, env, check_movies=False, top_k=10):\n",
     "    episode_reward = 0\n",
     "    steps = 0\n",
     "    mean_precision = 0\n",
     "    mean_ndcg = 0\n",
+    "    mean_recall = 0\n",
+    "    mean_ap = 0\n",
     "\n",
     "    user_id, items_ids, done = env.reset()\n",
     "    if check_movies:\n",
@@ -294,6 +296,24 @@
     "            #precision\n",
     "            correct_num = top_k-correct_list.count(0)\n",
     "            mean_precision += correct_num/top_k\n",
+    "\n",
+    "            # recall\n",
+    "            if hasattr(env, 'num_relevant_items') and env.num_relevant_items > 0:\n",
+    "                recall_k = correct_num / env.num_relevant_items\n",
+    "            else:\n",
+    "                recall_k = 0\n",
+    "            mean_recall += recall_k\n",
+    "\n",
+    "            # AP@k (average precision at k)\n",
+    "            num_hits = 0\n",
+    "            ap_sum = 0.0\n",
+    "            for idx, rel in enumerate(correct_list):\n",
+    "                if rel == 1:\n",
+    "                    num_hits += 1\n",
+    "                    ap_sum += num_hits / (idx + 1)\n",
+    "            average_precision = ap_sum / max(correct_list.count(1), 1)\n",
+    "            mean_ap += average_precision\n",
+    "\n",
     "            \n",
     "        reward = np.sum(reward)\n",
     "        items_ids = next_items_ids\n",
@@ -306,10 +326,10 @@
     "        break\n",
     "    \n",
     "    if check_movies:\n",
-    "        print(f'precision : {mean_precision/steps}, ngcg : {mean_ndcg/steps}, episode_reward : {episode_reward}')\n",
+    "        print(f'precision : {mean_precision/steps}, ngcg : {mean_ndcg/steps}, recall : {mean_recall/steps}, MAP : {mean_ap/steps}, episode_reward : {episode_reward}')\n",
     "        print()\n",
     "    \n",
-    "    return mean_precision/steps, mean_ndcg/steps\n",
+    "    return mean_precision/steps, mean_ndcg/steps, mean_recall/steps, mean_ap/steps\n",
     "\n",
     "def calculate_ndcg(rel, irel):\n",
     "    dcg = 0\n",
@@ -345,23 +365,28 @@
     "\n",
     "sum_precision = 0\n",
     "sum_ndcg = 0\n",
+    "sum_recall = 0\n",
+    "sum_map = 0\n",
     "\n",
     "end_evaluation = 10\n",
     "\n",
     "for i, user_id in enumerate(eval_users_dict.keys()):\n",
     "    env = OfflineEnv(eval_users_dict, eval_users_history_lens, movies_id_to_movies, STATE_SIZE, fix_user_id=user_id)\n",
-    "    recommender = DRRAgent(env, users_num, items_num, STATE_SIZE)\n",
+    "    recommender = DDPGAgent(env, users_num, movies_num, STATE_SIZE)\n",
     "    recommender.actor.build_networks()\n",
     "    recommender.critic.build_networks()\n",
     "    recommender.load_model(saved_actor, saved_critic)\n",
-    "    precision, ndcg = evaluate(recommender, env, check_movies=True, top_k=TOP_K) # if check movies is true, you can check the recommended movies\n",
+    "\n",
+    "    precision, ndcg, recall, map = evaluate(recommender, env, check_movies=True, top_k=TOP_K) # if check movies is true, you can check the recommended movies\n",
     "    sum_precision += precision\n",
     "    sum_ndcg += ndcg\n",
+    "    sum_recall += recall\n",
+    "    sum_map += map\n",
     "    \n",
     "    if i > end_evaluation:\n",
     "        break\n",
     "    \n",
-    "print(f'precision@{TOP_K} : {sum_precision/len(eval_users_dict)}, ndcg@{TOP_K} : {sum_ndcg/len(eval_users_dict)}')"
+    "print(f'precision@{TOP_K} : {sum_precision/len(eval_users_dict)}, ndcg@{TOP_K} : {sum_ndcg/len(eval_users_dict)}, recall@{TOP_K} : {sum_recall/len(eval_users_dict)}, MAP@{TOP_K} : {sum_map/len(eval_users_dict)}')"
    ]
   },
   {
